# msgpu_interface

./: CMakeLists.txt  packages.json
definitions/: ack.th  allocate_program.th  allocate_shader.th  attach_shader.th  begin_program_write.th  bind.th  buffer_target_type.th  clear_screen.th  draw_arrays.th  draw_triangle.th  generate_names.th  get_named_parameter_id.th  header.th  nack.th  program_write.th  set_vertex_attrib.th  use_program.th  write_buffer_data.th  write_parameter.th
message_generator/: cpp_header_generator.py  requirements.txt
shader_lib/: CMakeLists.txt
shader_lib/include/shader/: globals.hpp  mat4.hpp  shader.hpp  vec3.hpp  vec4.hpp
source/: data_buffer.hpp
tests/ut/: CMakeLists.txt  DataBufferTests.cpp
